# fast

./: .gitignore  README.md  config.py  gen.py  lint.sh  pyproject.toml  requirements.txt
bench/: .bazelrc  MODULE.bazel
bench/common/: BUILD.bazel  array.h  bazel.bzl
bench/cpp/: BUILD.bazel  abi.cpp  alias.cpp  batch.cpp  function_call.cpp  function_chain.cpp  loop_reorder.cpp  pow.cpp  shared_pointer.cpp  signed.cpp  static_variable.cpp  std_math.cpp  string.cpp
bench/cpu/: BUILD.bazel  async.cpp  async.zig  dependency.cpp  dependency.zig  false_dependency.cpp  false_dependency.zig  jump.cpp  jump.zig  modulo.cpp  modulo.zig  pointer_chasing.cpp  pointer_chasing.zig  power_of_two.cpp  power_of_two.zig  register.cpp  register.zig  sorted_array.cpp  sorted_array.zig  store_forwarding.cpp  store_forwarding.zig
bench/memory/: BUILD.bazel  cache.cpp  cache.zig  false_sharing.cpp  false_sharing.zig  lock.cpp  lock.zig  misalign.cpp  misalign.zig  page.cpp  page.zig  pause.cpp  pause.zig  recharge.cpp  recharge.zig  refresh.cpp  tlb.cpp  tlb_miss.cpp  tlb_miss.zig  tlb_shootdown.cpp  tlb_shootdown.zig  true_sharing.cpp  true_sharing.zig  vs_compute.cpp  vs_compute.zig  write.cpp  write.zig
src/: _layout.html  browse.html  challenge.html  data.yml  faq.html  index.html  machine.html  random.html  references.html  single.html
src/static/: prism.css  prism.js  robots.txt
