[project]
name = "fast"
version = "0.1.0"
description = "whichisfaster.dev"
requires-python = ">=3.9"
dependencies = [
    "jinja2==3.1.4",
    "click==8.1.7",
    "watchdog==4.0.1",
    "markdown==3.6",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
