cc_binary(
    name = "tlb_shootdown",
    srcs = [
        "tlb_shootdown.cpp",
    ],
    deps = [
        "@google_benchmark//:benchmark_main",
    ],
)

cc_binary(
    name = "false_sharing",
    srcs = [
        "false_sharing.cpp",
    ],
    deps = [
        "@google_benchmark//:benchmark_main",
    ],
)
